# cccrawl

./: .pre-commit-config.yaml  Dockerfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: cccrawl-AutoDeployTrigger-2c7db37a-347e-457b-84a0-ecf938050756.yml  cccrawl-AutoDeployTrigger-714b083a-9d90-4f6c-a80d-fa57adb8890e.yml  cd.yml
cccrawl/: manager.py
cccrawl/crawlers/: __init__.py  base.py  codeforces.py  cses.py  error.py
cccrawl/crawlers/toolkit/: __init__.py
cccrawl/db/: base.py  cosmos.py
cccrawl/files/: base.py  itty.py
cccrawl/integrations/: codeforces.py  cses.py
cccrawl/models/: any_integration.py  base.py  integration.py  problem.py  solution.py  submission.py  user.py
cccrawl/utils/: __init__.py  ratelimit.py
